added type generation, database client, characters route
