# backend/src/types.ts
@@ -1,0 +1,27 @@
+/**
+ * This file was auto-generated by swagger-to-ts.
+ * Do not make direct changes to the file.
+ */
+
+export interface components {
+  schemas: {
+    Character: {
+      user_id: number;
+      character_id: number;
+      creation_date: string;
+      character_name: string;
+      lvl: number;
+      xp: number;
+      age: number;
+      gender: string;
+      race: string;
+      class: string;
+      size: string;
+      height?: string;
+      weight: number;
+      eye_colour: string;
+      handedness: string;
+      physical_desc: string;
+    };
+  };
+}
